--- a/fastApi/templates/Login.html
+++ b/fastApi/templates/Login.html
@@ -19,7 +19,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/images">Images</a>
         </li>
-        <li class="nav-item">
+             <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/login">Login</a>
         </li>
          </ul>
@@ -31,16 +31,16 @@
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
-          <form action="/upload" enctype="multipart/form-data" method="post">
+          <form action="/login" method="get">
             <div class="form-group">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" name="userid" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">Browse Image</label>
-                <input
-                  name="file"
-                  class="form-control form-control-sm"
-                  id="formFileSm"
-                  type="file"
-                />
+                <label for="inputPassword5" class="form-label">Password</label>
+                <input type="password" name="userpass" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+                <div id="passwordHelpBlock" class="form-text">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</div>
               </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
