--- a/fastApi/templates/Login.html
+++ b/fastApi/templates/Login.html
@@ -10,28 +10,28 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Image Processing</title>
+    <title>Login</title>
   </head>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Home</a>
+      <!--<a class="navbar-brand" href="/">Home</a>-->
          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+                          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Login</a>
+        </li>
+<!--        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/images">Images</a>
-        </li>
-             <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
-        </li>
+        </li>-->
          </ul>
 
     </div>
   </nav>
   <body>
-    <div class="container text-center">
+    <div class="container text-left">
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
-          <form action="/login" method="get">
+          <form action="/imageprocessing" method="post">
             <div class="form-group">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
@@ -40,12 +40,12 @@
               <div class="mb-3">
                 <label for="inputPassword5" class="form-label">Password</label>
                 <input type="password" name="userpass" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-                <div id="passwordHelpBlock" class="form-text">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</div>
+                <div id="passwordHelpBlock" class="form-text">Enter Your password.</div>
               </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
-          <p>{{ message }}</p>
+
         </div>
         <div class="col-sm-1"></div>
       </div>
