--- a/fastApi/templates/images.html
+++ b/fastApi/templates/images.html
@@ -16,12 +16,13 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Home</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/SignIn">Login</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/images">Images</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
-        </li>
+
          </ul>
     </div>
   </nav>
