--- a/fastApi/templates/index.html
+++ b/fastApi/templates/index.html
@@ -14,14 +14,18 @@
   </head>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Home</a>
          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+                     <li class="nav-item" >
+          <a class="nav-link active" aria-current="page"  href="/">Logout</a>
+        </li>
+                                  <li class="nav-item" >
+          <a class="nav-link active" aria-current="page"  href="/refresh">Refresh</a>
+        </li>
+
+<!--        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/images">Images</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
-        </li>
+        </li>-->
+
          </ul>
 
     </div>
@@ -46,6 +50,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
           <p>{{ message }}</p>
+<!--            <p>Logged user details - {{ logindetails }}</p>-->
         </div>
         <div class="col-sm-1"></div>
       </div>
