--- a/fastApi/templates/Login.html
+++ b/fastApi/templates/Login.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-sm-1"></div>
       </div>
-      <div class="row">
+      <!--<div class="row">
         {% for file in files %}
             <div class="card" style="width: 18rem;">
               <li><img src="static/{{file}}" class="card-img-top" alt={file}></li>
@@ -68,7 +68,7 @@
               </div>
             </div>
 {% endfor %}
-      </div>
+      </div>-->
     </div>
 
     <script
